fix: x-overflow fixed
Framer motion x shifting made overflow-x happen. Scroll bar was appearing and breaking screen. Removed shift x on dropdown.

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,6 +1,8 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .navbar--container {
